--- a/php-laravel/bootcamp/composer.json
+++ b/php-laravel/bootcamp/composer.json
@@ -9,9 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "avto-dev/roadrunner-laravel": "^2.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spiral/roadrunner": "^1.4"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
