--- a/mysql/conf/my.cnf
+++ b/mysql/conf/my.cnf
@@ -2,6 +2,7 @@
 max_allowed_packet=16777216
 max_connections = 1024
 character-set-server=utf8mb4
+default_authentication_plugin= mysql_native_password
 
 [client]
 default-character-set=utf8mb4
