--- a/php-laravel/bootcamp/.env.example
+++ b/php-laravel/bootcamp/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=bootcamp
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3wOVGukhQpbWtVpoPN72c/J+O6FYE5uoVdWInW77M6Q=
 APP_DEBUG=true
 APP_URL=http://localhost
 
