--- a/php-laravel/bootcamp/.rr.yml
+++ b/php-laravel/bootcamp/.rr.yml
@@ -10,7 +10,7 @@ rpc:
   enable: true
 
   # rpc connection DSN. Supported TCP and Unix sockets.
-  listen: tcp://127.0.0.1:8000
+  listen: tcp://:6001
 
 metrics:
   # prometheus client address (path /metrics added automatically)
@@ -83,10 +83,10 @@ http:
     # worker pool configuration.
     pool:
       # number of workers to be serving.
-      numWorkers: 4
+      numWorkers: 1
 
       # maximum jobs per worker, 0 - unlimited.
-      maxJobs: 32
+      maxJobs: 1
 
       # for how long worker is allowed to be bootstrapped.
       allocateTimeout: 60
