--- a/front/nuxt/package.json
+++ b/front/nuxt/package.json
@@ -9,12 +9,16 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --ext .ts,.js,.vue ."
   },
   "dependencies": {
+    "eslint": "^6.5.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "^0.3.1",
+    "@nuxtjs/eslint-config-typescript": "^0.1.3",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
