--- a/front/nuxt/package.json
+++ b/front/nuxt/package.json
@@ -23,6 +23,8 @@
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "nes.css": "^2.2.1",
+    "nuxt-webfontloader": "^1.1.0",
     "vue-jest": "^4.0.0-0"
   }
 }
