--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3'
 services:
   php-laravel:
     image: web-app-bootcamp/php-laravel
-    build: ./php-laravel
+    build: ./api/php-laravel
     ports:
       - "8000:80"
     volumes:
-      - ./php-laravel/bootcamp:/var/www/bootcamp
+      - ./api/php-laravel/bootcamp:/var/www/bootcamp
     depends_on:
       - mysql
 
