--- a/front/nuxt/tsconfig.json
+++ b/front/nuxt/tsconfig.json
@@ -24,7 +24,8 @@
     },
     "types": [
       "@types/node",
-      "@nuxt/types"
+      "@nuxt/types",
+      "@nuxtjs/axios"
     ],
     "experimentalDecorators": true,
     "allowJs": true,
