--- a/front/nuxt/package.json
+++ b/front/nuxt/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.3.1",
+    "@nuxtjs/axios": "^5.6.0",
     "@nuxtjs/eslint-config-typescript": "^0.1.3",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
