Add input text v-model

--- a/front/nuxt/tsconfig.json
+++ b/front/nuxt/tsconfig.json
@@ -29,6 +29,7 @@
     ],
     "experimentalDecorators": true,
     "allowJs": true,
+    "strictPropertyInitialization": false
   },
   "exclude": [
     "node_modules"
