--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8000:80"
     volumes:
-      - ./api/php-laravel/bootcamp:/var/www/bootcamp
+      - ./api/php-laravel/bootcamp:/var/www/bootcamp:cached
     depends_on:
       - mysql
     networks: 
