--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,25 @@
 version: '3'
 
 services:
+  nginx:
+    image: nginx:1.17.5-alpine
+    ports:
+      - 8000:80
+    volumes:
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+
+    depends_on:
+      - php-laravel
   php-laravel:
     image: web-app-bootcamp/php-laravel
     build: ./api/php-laravel
-    ports:
-      - "8000:80"
+    expose:
+      - 9000
     volumes:
       - ./api/php-laravel/bootcamp:/var/www/bootcamp:cached
     depends_on:
       - mysql
-    networks: 
-      - database
 
   mysql:
     image: mysql:8.0
@@ -22,19 +30,12 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       TZ: Asia/Tokyo
-    networks: 
-      - database
 
   migrate:
     image: migrate/migrate:v4.6.2
     volumes:
     - ./migration:/migrations
-    networks: 
-      - database
-
 
 volumes:
   mysql-data:
 
-networks:
-  database:
