Fix front settings add .env

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
     root /var/www/bootcamp/public;
 
-    location / {
-        proxy_pass http://php-laravel:9000;
+    location /api/php-laravel/ {
+        proxy_pass http://php-laravel:9000/api/;
     }
 }
