--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -5,4 +5,8 @@ server {
     location /api/php-laravel/ {
         proxy_pass http://php-laravel:9000/api/;
     }
+
+    location /api/csharp-asp-dotnet/ {
+        proxy_pass http://csharp-asp-dotnet:5000/;
+    }
 }
