--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,10 @@ services:
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-
     depends_on:
       - php-laravel
+      - csharp-asp-dotnet
+
   php-laravel:
     image: web-app-bootcamp/php-laravel
     build: ./api/php-laravel
@@ -18,6 +19,16 @@ services:
       - 9000
     volumes:
       - ./api/php-laravel/bootcamp:/var/www/bootcamp:cached
+    depends_on:
+      - mysql
+
+  csharp-asp-dotnet:
+    image: web-app-bootcamp/csharp-asp-dotnet
+    build: ./api/csharp-asp-dotnet
+    expose:
+      - 5000
+    volumes:
+      - ./api/csharp-asp-dotnet/bootcamp:/app/bootcamp:cached
     depends_on:
       - mysql
 
