Add csharp diaries

--- a/api/csharp-asp-dotnet/bootcamp/appsettings.json
+++ b/api/csharp-asp-dotnet/bootcamp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionSettings": {
+    "MyContext": "server=mysql;userid=root;password=root;database=web_app_bootcamp;"
+  }
 }
