--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -9,4 +9,8 @@ server {
     location /api/csharp-asp-dotnet/ {
         proxy_pass http://csharp-asp-dotnet:5000/;
     }
+
+    location /api/ruby-on-rails/ {
+        proxy_pass http://ruby-on-rails:3000/;
+    }
 }
