--- a/api/ruby-on-rails/bootcamp/Gemfile
+++ b/api/ruby-on-rails/bootcamp/Gemfile
@@ -40,4 +40,5 @@ group :development do
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
+gem 'dotenv-rails'
 gem 'tzinfo-data'
