--- a/api/ruby-on-rails/bootcamp/config/database.yml
+++ b/api/ruby-on-rails/bootcamp/config/database.yml
@@ -19,14 +19,19 @@ default: &default
 
 development:
   <<: *default
-  database: bootcamp_development
+  password: root
+  host: mysql
+  database: <%= ENV['DATABASE_DEV_NAME'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV['DATABASE_DEV_USER'] %>
+  password: <%= ENV['DATABASE_DEV_PASSWORD'] %>
+  host: <%= ENV['DATABASE_DEV_HOST'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: bootcamp_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
