--- a/api/ruby-on-rails/bootcamp/Gemfile
+++ b/api/ruby-on-rails/bootcamp/Gemfile
@@ -42,3 +42,5 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'dotenv-rails'
 gem 'tzinfo-data'
+
+gem 'rack-cors'
