Add next settings, pages

--- a/front/next/package.json
+++ b/front/next/package.json
@@ -11,5 +11,10 @@
     "next": "9.2.2",
     "react": "16.13.0",
     "react-dom": "16.13.0"
+  },
+  "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "axios": "^0.19.2",
+    "nes.css": "^2.3.0"
   }
 }
